# simple-editor

./: .gitignore  ARCHITECTURE.md  BORDER_TOGGLE_FIX.md  BUILD.md  ENTERPRISE_SUMMARY.md  FINAL_ICON_FIXES.md  GITHUB_ACTIONS_FIX.md  GITHUB_ACTIONS_FIXES.md  GITHUB_ACTIONS_PERMISSIONS_FIX.md  GITHUB_ACTIONS_SIMPLIFIED.md  ICON_FIXES.md  Makefile  README.md  RELEASE_AUTOMATION.md  __init__.py  build_macos.sh  build_simple.sh  build_simple_macos.sh  create_icon.py  create_icon_full_coverage.py  create_icon_optimized.py  create_icon_simple.py  create_launcher.sh  install.sh  install_with_uv.sh  launch_editor.sh  pyproject.toml  requirements-build.txt  requirements.txt  setup.py  simple_editor.py  simple_editor_enterprise.py  simple_editor_qt.py  test_editor.py  test_enterprise.py  test_paste_content.py  test_paste_fix.py  test_save_error_handling.py  test_simple.py
.github/workflows/: build-macos.yml
src/: __init__.py  main.py  rainbow_border.py  text_editor.py
